Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106372

wasm: Using WebSockets from worker threads fail to work

XMLWordPrintable

    • WebAssembly
    • beb83bae7c (qt/qtwebsockets/dev) 52479b5d81 (qt/qtwebsockets/6.4.0) e5cf6c4f7b (qt/qtwebsockets/6.4) e5cf6c4f7b (qt/tqtc-qtwebsockets/6.4) 52479b5d81 (qt/tqtc-qtwebsockets/6.4.0) beb83bae7c (qt/tqtc-qtwebsockets/dev) e5cf6c4f7b (qt/qtwebsockets/6.4.1)

      If QWebSocket is used from a worker thread, it is trying to touch window object here:

      https://github.com/qt/qtwebsockets/blob/dev/src/websockets/qwebsocket_wasm_p.cpp#L139

       This can probably be fixed by using self instead of window in here.

        1. qtbug106372.tar.gz
          0.8 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-106372
        # Subject Branch Project Status CR V

            lpotter Lorn Potter
            poikelin Joni Poikelin
            Votes:
            7 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes