wasm: fix websocket use from worker thread

self is the current window or WorkerGlobalScope

Pick-to: 6.4 6.4.0
Fixes: QTBUG-106372
Change-Id: Ia23f8bd147d729d224ba8de0d44c07877ba24631
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>